@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.flutter_app">
    <application
-        android:label="flutter_app"
+        android:label="flutterCICD"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
