@@ -8,6 +8,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        //kc
+        classpath 'com.google.gms:google-services:4.3.3' // Google Services plugin
+        //classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
     }
 }
 
