@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  # kc: Add the dependency for the Firebase Core Flutter SDK
+  firebase_core: ^0.4.0+9
+  #kc end
   flutter:
     sdk: flutter
 
@@ -32,6 +35,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  #kc added
   integration_test: ^1.0.1
   test: any
 
